# esp32-weather-station

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
components/app_ctx/: CMakeLists.txt  app_ctx.c  app_ctx.h
components/captive_dns/: CMakeLists.txt  captive_dns.c  captive_dns.h
components/display/: CMakeLists.txt  buttons.c  buttons.h  display.c  display.h  ui.c  ui.h
components/history/: CMakeLists.txt  history.c  history.h
components/rtc_time/: CMakeLists.txt  rtc_time.c  rtc_time.h  rtc_time_priv.h
components/rtc_time/test/: CMakeLists.txt  test_rtc_time.c
components/sensor/: CMakeLists.txt  sensor.c  sensor.h
components/settings/: CMakeLists.txt  settings.c  settings.h  tz_table.c  tz_table.h
components/web_server/: CMakeLists.txt  handlers_common.c  handlers_common.h  handlers_mgmt.c  handlers_mgmt.h  handlers_ota.c  handlers_ota.h  i18n.c  i18n.h  mgmt_server.c  mgmt_server.h  portal_server.c  portal_server.h  web_server.c  web_server.h
components/web_server/test/: CMakeLists.txt  test_i18n.c
components/web_server/www/i18n/: de.json  en.json  fr.json  uk.json
components/web_server/www/mgmt/: index.html  mgmt.css  mgmt.html  mgmt.js
components/web_server/www/portal/: index.html  portal.css  portal.js
components/wifi_mgr/: CMakeLists.txt  wifi_mgr.c  wifi_mgr.h
main/: CMakeLists.txt  idf_component.yml  main.c
specs/001-weather-station-firmware/: data-model.md  plan.md  (+4 more)
(+23 files in other folders)
